new contact email added

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	  	<br>
 	  	<br>
 	  	<p class="credits">Contact me to discuss your project.</p>
-	  	<a data-wipe="Send Email" data-email="asiakozik@gmail.com" href="mailto:asiakozik@gmail.com?subject=Hello"> Send Email</a>
+	  	<a data-wipe="Send Email" data-email="asiakozik@gmail.com" href="mailto:joanna@joannakozik.com?subject=Hello"> Send Email</a>
 	  	</div>
 	  </section>  	
 	
